Fix Firefox button contrast correctly, keeping close buttons visible

--- a/src/gtk-3.0/3.20/gtk-light-compact.css
+++ b/src/gtk-3.0/3.20/gtk-light-compact.css
@@ -4522,6 +4522,10 @@ window.background:not(.csd) > menu > menu {
   border: none;
 }
 
+window.background:not(.csd) button label {
+  color: #574f4a;
+}
+
 window.background:not(.csd) > widget > menubar {
   color: rgba(87, 79, 74, 0.54);
 }
