--- a/src/gtk-3.0/3.22/gtk-compact.css
+++ b/src/gtk-3.0/3.22/gtk-compact.css
@@ -4684,6 +4684,10 @@ window.background:not(.csd) > menu > menu {
   border: none;
 }
 
+window.background:not(.csd) button label {
+  color: #574f4a;
+}
+
 window.background:not(.csd) > widget > menubar {
   color: rgba(255, 255, 255, 0.6);
 }
