--- a/src/gtk-3.0/3.22/sass/apps/_third-party.scss
+++ b/src/gtk-3.0/3.22/sass/apps/_third-party.scss
@@ -102,6 +102,10 @@ window.background:not(.csd) {
   // remove ugly border around the menus
   > window > menu,
   > menu > menu { border: none; }
+
+  button label {
+    color: rgba($fg_color, 1.0);
+  }
 }
 
 // Firefox now uses this for selected items
